--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, maximum-scale=1.0, minimum-scale=1.0, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>My Demo Site</title>
-<link rel="stylesheet" type="text/css" href="css/mobileFirst.css">
-<link rel="stylesheet" type="text/css" media="only screen and (min-width:601px)" href="css/desktop.css">
+<link rel="stylesheet" type="text/css" href="css/mobile.css">
+<link rel="stylesheet" media="only screen and (min-width:720px)" href="css/desktop.css">
 </head>
 <body>
 <div class="container">
@@ -17,6 +17,7 @@
   <ul>
   <li><a href="index.html">Home</a></li>
   <li><a href="exchangeRate.html">Exchange Calculator</a></li>
+  <li><a href="aboutUs.html">About Us</a></li>
   </ul>
   </nav>
   <div class="content">
@@ -31,7 +32,7 @@
   </div>
 </div>
 <footer>
-&copy; 2019 mustbebuilt
+&copy; 2020 mustbebuilt
 </footer>
 </div>
 <script src="js/main.js"></script>
