--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <title>My Demo Site</title>
 <link rel="stylesheet" type="text/css" href="css/mobileFirst.css">
 <link rel="stylesheet" type="text/css" media="only screen and (min-width:601px)" href="css/desktop.css">
+
 </head>
 <body>
 <div class="container">
@@ -25,7 +26,7 @@
     <img src="" alt="Winter Gardens" id="myImages">
     </p>
     <p>
-    Change Background colour: <span class="red colPicker">Red</span>, <span class="green colPicker">Green</span>, <span class="blue colPicker">Blue</span>,
+    Change Background colour: <span class="red colPicker">Red</span>, <span class="green colPicker">Green</span>, <span class="blue colPicker">Blue</span>, <span class="yellow colPicker">Yellow</span>,
     <span class="reset colPicker">Default</span></p>
     <p id="myTestEvent">Test Event</p>
   </div>
@@ -35,5 +36,13 @@
 </footer>
 </div>
 <script src="js/main.js"></script>
+<script>
+  document.getElementById('myHeading').innerHTML = "Your Name";
+  document.querySelector('nav ul li').setAttribute('class', 'currentPage');
+  document.getElementById('myTestEvent').addEventListener('click',
+function(ev){
+console.dir(ev);
+})
+</script>
 </body>
 </html>
